<resources>
    <string name="app_name">AgileGamificator</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_dashboard">Leaderboard</string>
    <string name="title_profile">Profile</string>
    <string name="avatar">Avatar</string>
    <string name="balance">Balance:</string>
    <string name="grade">Grade:</string>
    <string name="go_to_shop">Go to shop</string>
    <string name="log_out">Log out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
</resources>
